<resources>
    <string name="app_name">Kabaadi Bazaar</string>
    <string name="login">Login</string>
    <string name="make_your_city_clean">Make your city clean!</string>
    <string name="login_to_sell_your_scrap_and_manage_pickups">Login to sell your scrap and manage pickups</string>
    <string name="_91">+91</string>
    <string name="enter_your_mobile_number">Enter your mobile number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_email">Enter Email</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user_sign_up">New User? Sign Up</string>
    <string name="enter_name">Enter Name</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="move_to_login">Move to Login</string>
    <string name="enter_your_registerd_email_address">Enter Your Registerd Email Address</string>
    <string name="send_mail">Send Mail</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="wallet">WALLET</string>
    <string name="account">ACCOUNT</string>
    <string name="home">HOME</string>
    <string name="request">REQUEST</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_buy">We Buy</string>
    <string name="track">Track</string>
    <string name="contribution">Contribution</string>
    <string name="reports">Reports</string>
    <string name="ratelist">RateList</string>
    <string name="city">City:</string>
    <string name="newspaper">NEWSPAPER</string>
    <string name="_8_0_kg">8.0 /KG</string>
    <string name="_4_0_kg">4.0 /KG</string>
    <string name="carton_house">CARTON (HOUSE)</string>
    <string name="soft_plastic">SOFT PLASTIC</string>
    <string name="plastic_jar_15ltr">PLASTIC JAR (15LTR)</string>
    <string name="_12_0_kg">12.0 /KG</string>
    <string name="hard_plastic">HARD PLASTIC</string>
    <string name="grey_board">GREY BOARD</string>
    <string name="mix_plastic">MIX PLASTIC</string>
    <string name="_6_0_kg">6.0 /kg</string>
    <string name="polythene_mix">POLYTHENE (MIX)</string>
    <string name="_3_0_kg">3.0 /KG</string>
    <string name="e_waste">E-WASTE</string>
    <string name="_5_0_kg">5.0 /kg</string>
    <string name="_15_0_kg">15.0 /kg</string>
    <string name="white_papers">WHITE PAPERS</string>
    <string name="tin">TIN</string>
    <string name="magazines">MAGAZINES</string>
    <string name="_7_0_kg">7.0 /kg</string>
    <string name="fibre">FIBRE</string>
    <string name="polythene">POLYTHENE</string>
    <string name="_20_0_kg">20.0 /kg</string>
    <string name="mix_waste">MIX-WASTE</string>
    <string name="_2_0_kg">2.0 /KG</string>
    <string name="water_oil_covers">WATER/OIL COVERS</string>
    <string name="iron">IRON</string>
    <string name="_17_0_kg">17.0 /KG</string>
    <string name="plain_paper">PLAIN PAPER</string>
    <string name="_10_0_kg">10.0 /kg</string>
    <string name="rough_paper">ROUGH PAPER</string>
    <string name="_9_0_kg">9.0 /KG</string>
    <string name="record_paper">RECORD PAPER</string>
    <string name="aluminmum">ALUMINMUM</string>
    <string name="_80_0_kg">80.0 /KG</string>
    <string name="casting_aluminium">CASTING ALUMINIUM</string>
    <string name="_60_0_kg">60.0 /KG</string>
    <string name="battery">BATTERY</string>
    <string name="_30_0_kg">30.0 /KG</string>
    <string name="plastic_jar_5ltr">PLASTIC JAR (5LTR)</string>
    <string name="books">BOOKS</string>
    <string name="oil_tin_5_ltr">OIL TIN 5 LTR</string>
    <string name="_5_0_piece">5.0 /PIECE</string>
    <string name="copper">COPPER</string>
    <string name="_280_0_kg">280.0 /KG</string>
    <string name="brass">BRASS</string>
    <string name="_230_0_kg">230.0 /KG</string>
    <string name="oil_tin_15_ltr_fresh">OIL TIN 15LTR(FRESH)</string>
    <string name="_15_0_piece">15.0 /PIECE</string>
    <string name="oil_tin_ltr_scrap">OIL TIN 15LTR(SCRAP)</string>
    <string name="_10_0_piece">10.0 /PIECE</string>
    <string name="milk_covers">MILK COVERS</string>
    <string name="_13_0_kg">13.0 /KG</string>
    <string name="steel">STEEL</string>
    <string name="carton_shop">CARTON (SHOP)</string>
    <string name="list">LIST</string>
    <string name="rate">RATE</string>
    <string name="ahmedabad">Ahmedabad</string>
    <string name="bhopal">BHOPAL</string>
    <string name="ahmedabad_">AHMEDABAD</string>
    <string name="raipur">RAIPUR</string>
    <string name="indore">INDORE</string>
    <string name="aurangabad">AURANGABAD</string>
    <string name="select_city">Select City</string>
    <string name="bhopal_">Bhopal</string>
    <string name="abd">Ahmedabad</string>
    <string name="aur">Aurangabad</string>
    <string name="raipur_">Raipur</string>
    <string name="indore_">Indore</string>
    <string name="no_record_found">NO RECORD FOUND</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="title_activity_navigation">NavigationActivity</string>
</resources>
