<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/layout_border"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/select_city"
        android:textAllCaps="true"
        android:textColor="@color/colorTextGrey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvBhopal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectanglr_gray_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/bhopal"
        android:textAllCaps="true"
        android:textColor="@color/colorTextGrey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvAbd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectanglr_gray_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/ahmedabad"
        android:textAllCaps="true"
        android:textColor="@color/colorTextGrey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvAurangabad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectanglr_gray_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/aurangabad"
        android:textAllCaps="true"
        android:textColor="@color/colorTextGrey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvRaipur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rectanglr_gray_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/raipur"
        android:textAllCaps="true"
        android:textColor="@color/colorTextGrey"
        android:textSize="12sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvIndore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:background="@drawable/rectanglr_gray_border"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/indore"
        android:textAllCaps="true"
        android:textColor="@color/colorTextGrey"
        android:textSize="12sp"
        android:textStyle="normal" />
</LinearLayout>